@startuml DSC Domain Model
!theme plain
skinparam linetype ortho
skinparam class {
    BackgroundColor<<Legacy>> LightYellow
    BackgroundColor<<Core>> LightBlue
    BackgroundColor<<Catalog>> LightGreen
}

package "Core Domain" {
    class User <<Core>> {
        + Id : Guid
        + EmpId : int? <<Legacy>>
        + Username : string
        + Email : string
        + FirstName : string?
        + LastName : string?
        + PasswordHash : string?
        --
        + TimeEntries : ICollection<TimeEntry>
        + ProjectAssignments : ICollection<ProjectAssignment>
    }

    class UserAuth <<Legacy>> {
        + UserName : string {PK}
        + Password : string
        + EmpId : int?
        --
        + User : User?
    }

    class ExternalIdentity <<Core>> {
        + Id : Guid
        + UserId : Guid {FK}
        + Provider : string
        + Subject : string
        --
        + User : User
    }

    class Project <<Core>> {
        + Id : Guid
        + ProjectNo : string? <<Legacy>>
        + Name : string
        + Description : string?
        + IsActive : bool
        + EstimatedHours : decimal?
        --
        + WorkItems : ICollection<WorkItem>
        + Assignments : ICollection<ProjectAssignment>
    }

    class WorkItem <<Core>> {
        + Id : Guid
        + ProjectId : Guid {FK}
        + Title : string
        + Description : string?
        --
        + LegacyActivityId : int? <<Legacy>>
        + Date : DateTime? <<Legacy>>
        + StartTime : TimeSpan? <<Legacy>>
        + EndTime : TimeSpan? <<Legacy>>
        + PlannedDuration : decimal? <<Legacy>>
        + ActualDuration : decimal? <<Legacy>>
        + ActivityCode : string? <<Legacy>>
        + NetworkNumber : string? <<Legacy>>
        --
        + Project : Project
        + TimeEntries : ICollection<TimeEntry>
    }

    class TimeEntry <<Core>> {
        + Id : Guid
        + WorkItemId : Guid {FK}
        + UserId : Guid {FK}
        + Hours : decimal
        + EntryDate : DateTime
        + Notes : string?
        --
        + WorkItem : WorkItem
        + User : User
    }

    class ProjectAssignment <<Core>> {
        + ProjectId : Guid {FK, PK}
        + UserId : Guid {FK, PK}
        + AssignedDate : DateTime
        + Role : string?
        --
        + Project : Project
        + User : User
    }
}

package "Catalog Domain" {
    class Position <<Catalog>> {
        + Id : Guid
        + Title : string
        + Description : string?
        + IsActive : bool
    }

    class Department <<Catalog>> {
        + Id : Guid
        + Name : string
        + ManagerName : string?
        + IsActive : bool
    }

    class ExpenseCategory <<Catalog>> {
        + Id : Guid
        + Name : string
        + Description : string?
        + IsActive : bool
        --
        + Options : ICollection<ExpenseOption>
    }

    class ExpenseOption <<Catalog>> {
        + Id : Guid
        + ExpenseCategoryId : Guid {FK}
        + Name : string
        + IsActive : bool
        --
        + Category : ExpenseCategory
    }

    class ActivityCode <<Catalog>> {
        + Id : Guid
        + Code : string
        + Description : string?
        + IsActive : bool
    }

    class NetworkNumber <<Catalog>> {
        + Id : Guid
        + Number : string
        + Description : string?
        + IsActive : bool
    }

    class ProjectActivityOption <<Catalog>> {
        + ProjectId : Guid {FK, PK}
        + ActivityCodeId : Guid {FK, PK}
        + NetworkNumberId : Guid {FK, PK}
        --
        + Project : Project
        + ActivityCode : ActivityCode
        + NetworkNumber : NetworkNumber
    }
}

' Relationships
User "1" --> "*" TimeEntry : records
User "1" --> "*" ProjectAssignment : assigned to
User "1" <-- "0..1" ExternalIdentity : identity
User "1" <--> "0..1" UserAuth : legacy auth

Project "1" --> "*" WorkItem : contains
Project "1" --> "*" ProjectAssignment : assigned
Project "1" --> "*" ProjectActivityOption : activity options

WorkItem "1" --> "*" TimeEntry : tracked by
WorkItem "*" --> "1" Project : belongs to

ExpenseCategory "1" --> "*" ExpenseOption : has options

ProjectActivityOption "*" --> "1" Project
ProjectActivityOption "*" --> "1" ActivityCode
ProjectActivityOption "*" --> "1" NetworkNumber

note right of UserAuth
  Legacy table for incremental
  migration from local auth to OIDC.
  Will be deprecated after migration.
end note

note right of WorkItem
  Legacy activity fields support
  incremental porting from Java model.
end note

@enduml
